# apriltag

./: .gitignore  .travis.yml  AprilTagJNI.cpp  AprilTagJNI.h  CMakeLists.txt  LICENSE.md  Makefile  README.md  appveyor.yml  apriltag.c  apriltag.h  apriltag.pc  apriltag.pc.in  apriltag_config.h.in  apriltag_detect.docstring  apriltag_estimate_tag_pose.docstring  apriltag_math.h  apriltag_pose.c  apriltag_pose.h  apriltag_py_type.docstring  apriltag_pywrap.c  apriltag_quad_thresh.c  coding.sh  generate_stubs.py  harness.c  install.sh  package.xml  python_build_flags.py  repro  review.txt  solve_square.c  solve_square.h  tag16h5.c  tag16h5.h  tag25h8.c  tag25h8.h  tag25h9.c  tag25h9.h  tag36h10.c  tag36h10.h  (+29 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bloom.yml  cmake-multi-platform.yml  cmake-ubuntu.yml  colcon-workspace.yml  cross-compilation.yml  industrial_ci_action.yml  main.yml  ros_workspace.yml  windows_ci_action.yml
CMake/: apriltagConfig.cmake  apriltagConfig.cmake.in  arm-pi-gnueabihf.toolchain.cmake  vtkEncodeString.cmake
aruco/: tagAruco4x4_100.c  tagAruco4x4_1000.c  tagAruco4x4_250.c  tagAruco4x4_250.h  tagAruco4x4_50.c  tagAruco4x4_50.h  tagAruco5x5_100.c  tagAruco5x5_1000.c  tagAruco5x5_1000.h  tagAruco5x5_250.c  tagAruco5x5_250.h  tagAruco5x5_50.h  tagAruco6x6_100.c  tagAruco6x6_100.h  tagAruco6x6_1000.h  tagAruco6x6_250.c  tagAruco6x6_50.c  tagAruco6x6_50.h  tagAruco7x7_100.c  tagAruco7x7_1000.h  tagAruco7x7_250.c  tagAruco7x7_250.h  tagAruco7x7_50.c  tagAruco7x7_50.h  tagArucoMIP36h12.c  tagArucoMIP36h12.h
common/: debug_print.h  diagnostic.h  doubles.h  doubles_floats_impl.h  floats.h  g2d.c  g2d.h  getopt.c  getopt.h  homography.c  homography.h  image_types.h  image_u8.c  image_u8.h  image_u8_parallel.c  image_u8_parallel.h  image_u8x3.c  image_u8x3.h  image_u8x4.c  image_u8x4.h  matd.c  matd.h  math_util.h  pam.c  pam.h  pjpeg-idct.c  pjpeg.c  pjpeg.h  pnm.c  pnm.h  postscript_utils.h  pthreads_cross.c  pthreads_cross.cpp  pthreads_cross.h  string_util.c  string_util.h  svd22.c  svd22.h  time_util.c  time_util.h  (+11 more)
example/: .gitignore  CMakeLists.txt  Makefile  README  apriltag_debug.c  apriltag_debug.h  apriltag_demo.c  getopt.c  getopt.h  image_u8x3.c  image_u8x4.c  image_u8x4.h  opencv_demo.cc  pam.c  pjpeg-idct.c  pjpeg.c  pjpeg.h  pnm.c  time_util.c  time_util.h
libs/apriltag/: CMakeLists.txt
libs/apriltag/CMake/: apriltagHelperFunctions.cmake
libs/apriltag/include/apriltag/: apriltag.h  apriltag_pose.h  tag16h5.h  tag25h9.h  tag36h10.h  tag36h11.h  tagCircle21h7.h  tagCircle49h12.h  tagCustom48h12.h  tagStandard41h12.h  tagStandard52h13.h
libs/apriltag/include/apriltag/common/: pthreads_cross.h  time_util.h  unionfind.h  zarray.h
libs/apriltag/src/: apriltag.c  apriltag_pose.c  apriltag_quad_thresh.c  tag16h5.c  tag25h9.c  tag36h10.c  tag36h11.c  tagCircle21h7.c  tagCircle49h12.c  tagCustom48h12.c  tagStandard41h12.c  tagStandard52h13.c
libs/apriltag/src/common/: doubles.h  doubles_floats_impl.h  floats.h  g2d.c  getopt.c  homography.c  image_u8.c  image_u8x3.c  image_u8x4.c  matd.c  pam.c  pjpeg.c  pnm.c  pthreads_cross.cpp  string_util.c  svd22.c  time_util.c  workerpool.c  zarray.c  zhash.c  zmaxheap.c
libs/apriltag_python/: CMakeLists.txt  apriltag_detect.docstring  apriltag_py_type.docstring  apriltag_pywrap.c
rpi/: .gitignore  Makefile  README  RaspiCommonSettings.c  RaspiCommonSettings.h  RaspiHelpers.c  RaspiVidYUV.c  mtqueue.c  mtqueue.h  rpi_apriltag_demo.c  rpi_video.c  rpi_video.h  rpi_video_test.c  zqueue.c  zqueue.h
test/: CMakeLists.txt  getline.c  getline.h  test_detection.c  test_multiple_sizes.c  test_quick_decode.c  test_tag_pose_estimation.c  test_tag_pose_estimation.py
test/data/: 33369213973_9d9bb4cc96_c.txt  34085369442_304b6bafd9_c.txt  34139872896_defdb2f8d9_c.txt  README.md
