<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag</name>
  <version>3.1.3</version>
  <description>AprilTag detector library</description>

  <maintainer email="mkrogius@umich.edu">Max Krogius</maintainer>
  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>

  <author email="ebolson@umich.edu">Edwin Olson</author>
  <author email="mkrogius@umich.edu">Max Krogius</author>

  <license>BSD</license>
  <url>https://april.eecs.umich.edu/software/apriltag.html</url>

  <buildtool_depend>cmake</buildtool_depend>
  <!-- Do not install numpy for Python2, so it won't build a Python3 wrapper when Python2 is ROS-default -->
  <!--<build_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</build_depend>-->
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
