<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag</name>
  <version>3.4.3</version>
  <description>AprilTag detector library</description>

  <maintainer email="mkrogius@umich.edu">Max Krogius</maintainer>
  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>
  <maintainer email="Rauch.Christian@gmx.de">Christian Rauch</maintainer>

  <license>BSD</license>
  <url>https://april.eecs.umich.edu/software/apriltag.html</url>

  <author email="ebolson@umich.edu">Edwin Olson</author>
  <author email="mkrogius@umich.edu">Max Krogius</author>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-dev</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</build_depend>

  <!-- Specify test dependency on OpenCV such that examples are built on the test server-->
  <test_depend>libopencv-dev</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
